Changes in Rvmmin

Changes before 2012-4-30 not recorded 

TODOS
   o    Saving of final Hessian approx as in Rvmminx

   o    Eventual incorporation of line searches, possibly in a
        separate routine

2013-8-19

   o    Numerical gradient from optextras, remove bmchk from package,
	put bmchk call in Rvmmin, not Rvmminb

2013-7-20
   o    Minor improvements to timing by use of crossprod() in 
        computing y and D2

2012-7-9
   o    Removed optansout to avoid conflicts with optplus/optimx

2012-5-21
   o	Separation of constrained and unconstrained versions.
