@@ -14,6 +14,9 @@ TODOS
 
 Changes
 
+2013-10-27
+   o    Inserted missing index in bmchk (bdmsk)
+
 2013-9-11
    o    Fixed some elements of manual. Alias optextras-package
         to optextras.
